--- a/pom.xml
+++ b/pom.xml
@@ -41,13 +41,14 @@
 	    <version>2.13.3</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+	<!-- -->
 	<dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
 	    <version>6.8</version>
-	    <scope>test</scope>
+	  
 	</dependency>
-	
+	<!--  -->
 	<dependency>
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi-ooxml</artifactId>
@@ -71,39 +72,63 @@
 	    <artifactId>commons-compress</artifactId>
 	    <version>1.20</version>
 	</dependency>
+	<!-- -->
 	<dependency>
 	    <groupId>org.junit.platform</groupId>
 	    <artifactId>junit-platform-launcher</artifactId>
 	    <version>1.6.0</version>
-	    <scope>test</scope>
+
 	</dependency>
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter-engine</artifactId>
 	    <version>5.6.0</version>
-	    <scope>test</scope>
+	   
 	</dependency>
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter-api</artifactId>
 	    <version>5.9.1</version>
-	    <scope>test</scope>
+	    
 	</dependency>
 	<dependency>
 	    <groupId>org.junit.vintage</groupId>
 	    <artifactId>junit-vintage-engine</artifactId>
 	    <version>5.6.0</version>
-	    <scope>test</scope>
+	   
 	</dependency>
 	 <dependency>
 	    <groupId>org.opentest4j</groupId>
 	    <artifactId>opentest4j</artifactId>
 	    <version>1.2.0</version>
-	    <scope>test</scope>
-	</dependency>	
+	 
+	</dependency>
+		<!-- -->	
   </dependencies>
   <build>
         <plugins>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+          			<skipTests>true</skipTests>
+       		    </configuration>
+            </plugin>
+		    <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-failsafe-plugin</artifactId>
+		        <version>3.0.0</version>
+		        <executions>
+		          <execution>
+		            <id>integration-test</id>
+		            <goals>
+		              <goal>integration-test</goal>
+		              <goal>verify</goal>
+		            </goals>
+		          </execution>
+		        </executions>
+		    </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
